--- a/index.html
+++ b/index.html
@@ -6,20 +6,67 @@
     <title>HTML London Trip</title>
 </head>
 <body>
-    <section>
-        <h1>
-            Il mio Viaggio a Londra
-        </h1>
-        <img 
-        src="./img//pexels-bill-emrich-230794-0.jpg" 
-        alt="img 0 ruota panoramica">
-        <img 
-        src="./img/pexels-bill-emrich-230794-1.jpg" 
-        alt="img 1 panorama centrale">
-        <img 
-        src="./img/pexels-bill-emrich-230794-2.jpg" 
-        alt="img 2 panorama Big Ben">
-    </section>
-    <hr>
+    <main>
+                                <!-- prima sezione della pagina -->
+       <section>
+            <h1>
+                Il mio Viaggio a Londra
+            </h1>
+            <img 
+            src="./img//pexels-bill-emrich-230794-0.jpg" 
+            alt="img 0 ruota panoramica">
+            <img 
+            src="./img/pexels-bill-emrich-230794-1.jpg" 
+            alt="img 1 panorama centrale">
+            <img 
+            src="./img/pexels-bill-emrich-230794-2.jpg" 
+            alt="img 2 panorama Big Ben">
+        </section>
+        <hr>
+                                <!-- seconda sezione della pagina -->
+        <section>
+            <h2>
+                Le mie spese
+            </h2>
+            <table>
+                                <!-- intestazione della tabella -->
+                <thead>   
+                    <tr>
+                        <th><strong>Numero</strong></th>
+                        <th><strong>Descrizione</strong></th>
+                        <th><strong>Costo</strong></th>
+                    </tr>
+                </thead>
+                                <!-- corpo della tabella -->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 &euro;</td>
+                    </tr>
+                    <tr>        
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 &euro;</td>
+                    </tr>
+                    <tr>        
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120 &euro;</td>
+                    </tr>
+                </tbody>
+                                <!-- footer della tabella -->
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360 &euro;</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
+
+        </section>
+    </main>
 </body>
 </html>
