--- a/index.html
+++ b/index.html
@@ -64,9 +64,21 @@
                     </tr>
                 </tfoot>
             </table>
-            <hr>
-
         </section>
+        <hr>    
+                                <!-- terza sezione della pagina -->
+        <section>  
+            <h3>
+                Cose da fare
+            </h3>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare Greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangaire il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+        </section>
+        <hr>
     </main>
 </body>
 </html>
