ADD - Fourth and Fifth section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,64 @@
             </ul>
         </section>
         <hr>
+                                <!-- quarta sezione della pagina -->
+        <section>
+            <h3>
+                Info Utili:
+            </h3>
+            <ol>
+                <li>
+                    Numeri di emergenza
+                    <ul>
+                        <li>
+                            <strong>999</strong> - Emergenza
+                        </li>
+                        <li>
+                            <strong>101</strong> - Numero Polizia
+                        </li>
+                        <li>
+                            <strong>111</strong> - Numero Assistenza Medica
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li>
+                            <strong>Nome Hotel</strong> - Buckingham Palace
+                        </li>
+                        <li>
+                            <strong>Indirizzo Hotel</strong> - Westminster, London SW1A1AA, Regno Unito
+                        </li>
+                    </ul> 
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li>
+                            <strong>Volo di Andata:</strong> - Y1234X, ore 9.30 da Milano Malpensa  
+                        </li>
+                        <li>
+                            <strong>Volo di Ritorno:</strong> - Y1236X, ore 18.30 da London Heathrow
+                        </li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+        <hr>
+                                <!-- quinta sezione della pagina -->
+        <section>
+            <h3>
+                Le foto
+            </h3>
+
+            <img 
+            src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" 
+            alt="Millennium Bridge">
+
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" 
+            alt="London Tower Bridge">
+        </section>                        
     </main>
 </body>
 </html>
